--- a/app/src/main/res/layout/item_loading.xml
+++ b/app/src/main/res/layout/item_loading.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/progressBar"/>
-            <com.yunitaandini.contact.customClass.RobotoRegularTextView
+            <com.liquidchoco.contact.customClass.RobotoRegularTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Please Wait"
