--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -4,162 +4,224 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.yunitaandini.contact.viewController.AddContactActivity">
-    <LinearLayout
-        android:orientation="vertical"
+    tools:context="com.liquidchoco.contact.AddContactActivity">
+    <FrameLayout
+        android:id="@+id/activity_add_contact_rootFrameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical">
-                    <ImageView
-                        android:id="@+id/activity_add_contact_backImageView"
-                        android:layout_width="56dp"
-                        android:layout_height="match_parent"
-                        android:paddingRight="16dp"
-                        android:paddingLeft="16dp"
-                        android:layout_marginLeft="-16dp"
-                        android:src="@drawable/ic_back"/>
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
-                    <com.liquidchoco.contact.customClass.RobotoMediumTextView
-                        android:layout_toLeftOf="@+id/activity_add_contact_saveImageView"
-                        android:layout_toRightOf="@+id/activity_add_contact_backImageView"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <android.support.design.widget.AppBarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/AppTheme.AppBarOverlay">
+                    <android.support.v7.widget.Toolbar
+                        android:id="@+id/toolbar"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="16dp"
-                        android:gravity="center_vertical"
-                        android:text="Add new contact"
-                        android:textSize="20sp"
-                        android:textColor="@android:color/white"/>
-    
+                        android:layout_height="?attr/actionBarSize"
+                        android:background="?attr/colorPrimary"
+                        app:popupTheme="@style/AppTheme.PopupOverlay">
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical">
+                            <ImageView
+                                android:id="@+id/activity_add_contact_backImageView"
+                                android:layout_width="56dp"
+                                android:layout_height="match_parent"
+                                android:paddingRight="16dp"
+                                android:paddingLeft="16dp"
+                                android:layout_marginLeft="-16dp"
+                                android:src="@drawable/ic_back"/>
+
+                            <com.liquidchoco.contact.customClass.RobotoMediumTextView
+                                android:layout_toLeftOf="@+id/activity_add_contact_saveImageView"
+                                android:layout_toRightOf="@+id/activity_add_contact_backImageView"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="16dp"
+                                android:gravity="center_vertical"
+                                android:text="Add new contact"
+                                android:textSize="20sp"
+                                android:textColor="@android:color/white"/>
+
+                            <ImageView
+                                android:id="@+id/activity_add_contact_saveImageView"
+                                android:layout_alignParentRight="true"
+                                android:layout_width="56dp"
+                                android:layout_height="match_parent"
+                                android:paddingRight="16dp"
+                                android:paddingLeft="16dp"
+                                android:src="@drawable/ic_save"/>
+                        </RelativeLayout>
+                    </android.support.v7.widget.Toolbar>
+                </android.support.design.widget.AppBarLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp">
                     <ImageView
-                        android:id="@+id/activity_add_contact_saveImageView"
-                        android:layout_alignParentRight="true"
+                        android:id="@+id/activity_add_contact_contactImageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:src="@drawable/ic_profile_large"
+                        android:background="@color/appGray1"/>
+
+                    <ImageView
+                        android:id="@+id/activity_add_contact_addPhotoImageView"
                         android:layout_width="56dp"
-                        android:layout_height="match_parent"
-                        android:paddingRight="16dp"
-                        android:paddingLeft="16dp"
-                        android:src="@drawable/ic_save"/>
-                </RelativeLayout>
-            </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.AppBarLayout>
+                        android:layout_height="56dp"
+                        android:padding="16dp"
+                        android:layout_gravity="bottom|right"
+                        android:src="@drawable/ic_image"/>
+                </FrameLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
-            <ImageView
-                android:id="@+id/activity_add_contact_contactImageView"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/ic_profile_large"
-                android:background="@color/appGray1"/>
-
-            <ImageView
-                android:id="@+id/activity_add_contact_addPhotoImageView"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:padding="16dp"
-                android:layout_gravity="bottom|right"
-                android:src="@drawable/ic_image"/>
-        </FrameLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="12dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="32dp"
-                    android:src="@drawable/ic_profile"/>
-
-                <com.liquidchoco.contact.customClass.RobotoRegularEditText
-                    android:id="@+id/activity_add_contact_nameEditText"
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="4dp"
-                    android:hint="Name"
-                    android:textSize="16sp"
-                    android:textColorHint="#61000000"/>
+                    android:layout_marginTop="36dp">
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="12dp"
+                        android:paddingLeft="12dp"
+                        android:paddingRight="12dp">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginRight="32dp"
+                            android:src="@drawable/ic_profile"/>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:focusable="false"
+                            android:focusableInTouchMode="true"
+                            android:textColorHint="#61000000"
+                            android:nextFocusDown="@+id/activity_add_contact_phoneEditText">
+                            <com.liquidchoco.contact.customClass.RobotoRegularEditText
+                                android:id="@+id/activity_add_contact_nameEditText"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="4dp"
+                                android:hint="Name"
+                                android:inputType="text"
+                                android:textSize="16sp"
+                                android:textColorHint="#61000000"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <com.liquidchoco.contact.customClass.RobotoRegularTextView
+                        android:id="@+id/activity_add_contact_invalidNameTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="77dp"
+                        android:text="First Name and Last Name should be more than 3 characters"
+                        android:textSize="12sp"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:visibility="gone"/>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="12dp"
+                        android:paddingLeft="12dp"
+                        android:paddingRight="12dp">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginRight="32dp"
+                            android:src="@drawable/ic_call_grey"/>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:focusable="false"
+                            android:focusableInTouchMode="true"
+                            android:textColorHint="#61000000"
+                            android:nextFocusDown="@+id/activity_add_contact_emailEditText">
+                            <com.liquidchoco.contact.customClass.RobotoRegularEditText
+                            android:id="@+id/activity_add_contact_phoneEditText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="4dp"
+                            android:singleLine="true"
+                            android:hint="Phone"
+                            android:textSize="16sp"
+                            android:textColorHint="#61000000"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <com.liquidchoco.contact.customClass.RobotoRegularTextView
+                        android:id="@+id/activity_add_contact_invalidPhoneTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="77dp"
+                        android:inputType="phone"
+                        android:text="Phone invalid"
+                        android:textSize="12sp"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:visibility="gone"/>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="12dp"
+                        android:paddingLeft="12dp"
+                        android:paddingRight="12dp">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="4dp"
+                            android:layout_marginRight="32dp"
+                            android:src="@drawable/ic_email"/>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:focusable="false"
+                            android:focusableInTouchMode="true"
+                            android:textColorHint="#61000000">
+                            <com.liquidchoco.contact.customClass.RobotoRegularEditText
+                            android:id="@+id/activity_add_contact_emailEditText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="4dp"
+                            android:hint="Email"
+                            android:textSize="16sp"
+                            android:textColorHint="#61000000"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <com.liquidchoco.contact.customClass.RobotoRegularTextView
+                        android:id="@+id/activity_add_contact_invalidEmailTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="77dp"
+                        android:inputType="textEmailAddress"
+                        android:text="Email invalid"
+                        android:textSize="12sp"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:visibility="gone"/>
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="12dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="32dp"
-                    android:src="@drawable/ic_call_grey"/>
-
-                <com.liquidchoco.contact.customClass.RobotoRegularEditText
-                    android:id="@+id/activity_add_contact_phoneEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="4dp"
-                    android:hint="Phone"
-                    android:textSize="16sp"
-                    android:textColorHint="#61000000"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="12dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="32dp"
-                    android:src="@drawable/ic_email"/>
-
-                <com.liquidchoco.contact.customClass.RobotoRegularEditText
-                    android:id="@+id/activity_add_contact_emailEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="4dp"
-                    android:hint="Email"
-                    android:textSize="16sp"
-                    android:textColorHint="#61000000"/>
-            </LinearLayout>
-
-            <com.liquidchoco.contact.customClass.RobotoRegularTextView
-                android:id="@+id/activity_add_contact_invalidTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="77dp"
-                android:text="Email invalid"
-                android:textSize="12sp"
-                android:textColor="@android:color/holo_red_dark"
-                android:visibility="gone"/>
-        </LinearLayout>
-    </LinearLayout>
+        </ScrollView>
+    </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
 
