--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -158,6 +158,7 @@
                             android:layout_marginRight="4dp"
                             android:singleLine="true"
                             android:hint="Phone"
+                            android:inputType="phone"
                             android:textSize="16sp"
                             android:textColorHint="#61000000"/>
                         </android.support.design.widget.TextInputLayout>
@@ -199,6 +200,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="4dp"
                             android:hint="Email"
+                            android:inputType="textEmailAddress"
                             android:textSize="16sp"
                             android:textColorHint="#61000000"/>
                         </android.support.design.widget.TextInputLayout>
