--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -25,9 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="A"
             android:textSize="20sp"
-            android:textColor="@android:color/white"/>
+            android:textColor="@color/colorPrimary"/>
     </FrameLayout>
 
     <FrameLayout
