--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
             android:layout_marginBottom="16dp"
             android:padding="13dp"
             android:background="@drawable/circle_green"
+            android:backgroundTint="@color/colorPrimary"
             android:src="@drawable/ic_add_contacts"/>
     </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
