--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -17,8 +17,7 @@
             android:id="@+id/item_contact_favoriteIconImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_favourite_filled"
-            android:tint="@color/colorPrimary"/>
+            android:src="@drawable/ic_star"/>
 
         <com.liquidchoco.contact.customClass.RobotoRegularTextView
             android:id="@+id/item_contact_initialTextView"
